# stopwatch-rust

./: Cargo.toml  LICENSE  LICENSE.md  README.md
src/: lib.rs  main.rs
tests/: stopwatch_tests.rs
