[package]
name = "timer-cli"
version = "0.3.0"
edition = "2021"
description = "A reliable timing CLI: REPL + batch, realtime watch, lap/export, measure external commands"
repository = "https://github.com/rfxlamia/timer-cli"
readme = "README.md"
license = "MIT"
keywords = ["cli", "timer", "stopwatch", "repl", "benchmark"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

[dev-dependencies]
